--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>fff</h1>
+	 <div class="header">
+		<div class="logo">
+				<img src="https://pngimg.com/uploads/nike/small/nike_PNG4.png" alt="">
+		</div>
+		<div class="settings">
+			<div>
+				<p>Find a store</p>
+			</div>
+			<div>
+				<p>Help</p>
+			</div>
+			<div>
+				<p>Join us</p>
+			</div>
+			<div>
+				<p>Sign in</p>
+			</div>
+		</div>
+	 </div>
 </body>
 </html>
